crates/biome_cli/tests/snapshots/main_cases_overrides_organize_imports/does_handle_javascript_assist_override.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome check --write --formatter-enabled=false --linter-enabled=false test.js special/test2.js
```

## `biome.json`

```json
{
  "files": {
    "includes": ["test.js", "special/**"]
  },
  "overrides": [
    {
      "includes": ["special/**"],
      "javascript": { "assist": { "enabled": false } }
    }
  ]
}
```

## `special/test2.js`

```js
import * as something from "../something";
import { lorem, foom, bar } from "foo";
```

## `test.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
